# curvature_aware_mpcc_pkg

./: .gitignore  CAMPCC_study_results.csv  CMakeLists.txt  LICENSE  MPCC_PP_study_results.csv  README.md  optuna_study_resultsCAMPCC.csv  optuna_study_resultsCAMPCC.csv.db  optuna_study_resultsMPCC_PP.csv  optuna_study_resultsMPCC_PP.csv.db  package.xml
cfg/: GUI_mpc_dynamic_reconfigure.cfg
launch files/: mpc_controller.launch  rviz_visualization.launch
rviz_configs/: jetracer_visualization_config.rviz  jetracer_visualization_config_4_vehicles.rviz
src/: functions_for_MPCC_node_running.py  load_optuna_study.py  mpc_node.py  tune_FORCES_high_level.py
src/MPC_generate_solvers/: 0_build_all_solvers.py  1_build_solvers_ACADOS_high_level.py  2_build_solvers_FORCES_high_level.py  3_build_solvers_ACADOS_low_level.py  4_build_solvers_FORCES_low_level.py  5_build_high_level_MPCC_PP.py  5_build_solvers_ACADOS_high_level_MPCC_PP.py  6_path_labels_casadi.py  build_solvers_ACADOS_high_level.py  build_solvers_ACADOS_low_level.py  build_solvers_FORCES_low_level.py  curvature_representation_study.py  functions_for_solver_generation.py  functions_for_solver_generation_temp.py  path_track_definitions.py  test_FORCES_high_level_solver.py  test_FORCES_low_level_solver.py  test_path_label_generator.py
src/MPC_generate_solvers/solvers/: dummy_file.txt
